[package]
name = "radb_client"
version = "1.1.7"
edition = "2021"
authors = ["Alessandro Crugnola <alessandro.crugnola@gmail.com>"]
description = "adb client for rust"
license = "MIT"
homepage = "https://github.com/sephiroth74/radb_client"
repository = "https://github.com/sephiroth74/radb_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.20.2"
chrono = "0.4.38"
file-mode = "0.1.2"
lazy_static = "1.5.0"
java-properties = "2.0.0"
regex = "1.11.0"
strum_macros = "0.26.4"
time = { version = "0.3.36", features = ["macros"] }
which = "6.0.3"
mac_address = "1.1.7"
uuid = { version = "1.11.0", features = ["v4"] }
arboard = "3.4.1"
image = "0.25.3"
num_cpus = "1.16.0"
thiserror = "1.0.64"
rustix = "0.38.37"
dirs = "5.0.1"
itertools = "0.13.0"
crossbeam = "0.8.4"
signal-hook = "0.3.17"
crossbeam-channel = "0.5.13"
threadpool = { version = "1.8.1", optional = true }
cmd_lib = "1.9.5"
tracing = "0.1.40"
simple-cmd = "0.0.19"
cached = { version = "0.53.1" }
serde = { version = "1.0.210", features = ["derive"] }
cidr-utils = "0.6.1"
strum = "0.26.3"
anyhow = "1.0.89"

[dev-dependencies]
indicatif = { version = "0.17.8" }
anyhow = "1.0.89"
ctrlc = "3.4.5"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }
tracing-appender = "0.2.3"
radb_client = { path = ".", features = ["scanner"] }

[features]
default = []
scanner = ["dep:threadpool"]

[workspace]

